lab/Ingress/hellowhale-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-whale-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.org/rewrites: "serviceName=hello-green-whale-svc rewrite=/;serviceName=hello-blue-whale-svc rewrite=/"
spec:
  rules:
  - host: hello.whale.info
    http:
      paths:
      - path: /green/(.*)
        pathType: Prefix
        backend:
          service : 
            name: hello-green-whale-svc
            port: 
              number: 80
      - path: /blue/(.*)
        pathType: Prefix
        backend:
          service : 
            name: hello-blue-whale-svc
            port: 
              number: 80
